 8. Fix clipping of some icons in menus.
 9. Show total duration of selected items, if items have duration.
10. Add GENRENAME, GENREID, and YEAR custom action placeholders.
11. Intercept genre list from 'More', and replace with Material's category
    selection.
12. Long-press on power buttons in players menu to show sleep settings for
    player.

2.3.1
-----
 1. Remove min 400px width constraint for advanced search, no longer applies
    with new dialog.
 2. Fix long titles in 'Manage players' dialog.
 3. Disable entry fields, etc, when search is active in 'Advanced search'
    dialog.
 4. When checking for library_id in previously pinned items, check params length
    is greater than 0.
 5. If browsing into a pinned item with virtual library then show its library
    name in subtoolbar.
 6. Make group volume dialog scrollable.
 7. Update translations.
 8. Remove window min height restriction for showing group volume dialog.
 9. When showing group volume dialog when no volume slider shown in toolbar,
    then scroll to active player's volume.
10. Fix genre names not showing in 'Advanced search' dialog.
11. Move font-size context menu into tab-titles of 'Now playing' and allow main
    info text to be selected.

2.3.0
-----
 1. Add 'Add to playlist' to queue items and subtoolbar (when have selection).
 2. If playlist name is empty in 'Add to playlist' dialog, then select first.
 3. If previous playlist name is no longer valid when open 'Add to playlist'
    dialog, then select first.
 4. Set list item hover highlight for all themes.
 5. Add menu items to copy queue selection to playlist, and browse selection to
    queue.
 6. When showing volume-popup show all volumes if in sync group.
 7. If player is in sync group, then add a button next to volume-slider (in main
    toolbar) to show volume-popup with all volumes.
 8. Add link to player settings from 'Information' dialog.
 9. Move 'Server settings', 'Player settings' and (for Android APK) 'Application